--- a/docs/1.0. Overview.md
+++ b/docs/1.0. Overview.md
@@ -1,22 +1,23 @@
-# AMWA NMOS Template Specification: Overview
-{:.no_toc}
+# NMOS Authorization Implementation Guide: Overview
+_(c) AMWA 2021, CC Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)_
 
-* A markdown unordered list which will be replaced with the ToC, excluding the "Contents header" from above
-{:toc}
+## Scope
+This document is intended as a guide for implementers who want to add NMOS Authorization to their NMOS Nodes and Controllers.
 
-_(c) AMWA 2020, CC Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)_
+## Adding Authentication to API Calls
+IS-10 authorization is based on OAuth 2.0 and so adding authorization to your IS-04, IS-05, IS-07 and IS-08 API calls simply involves [adding an Access Token](4.2.%20Node%20to%20Registry%20Interactions%20(IS-04).md) to the [HTTP header of your requests](4.4.%20Controller%20to%20Node%20Interactions%20(IS-05%2C%20IS-08).md).  
 
-## Documentation
+## Getting an Access Token
+Both [NMOS Nodes](4.1.%20Node%20to%20Authorization%20Server%20Interactions.md) and [Controllers](4.3.%20Controller%20to%20Authorization%20Server%20Interactions.md) can retrieve Access Tokens from an [Authorization Server](3.0.%20Authorization%20Server%20Setup.md).
 
-The documents included in this directory provide additional details and recommendations for implementations of the defined API(s), and for API clients.
+## Validating API Calls
+If you receive an authenticated API call you will need to check that the [token you've received is valid](4.6.%20Validating%20Access%20Tokens.md).
 
-## Introduction
+## Getting Started
+There is some [prerequisite knowledge](2.0.%20Prerequisites.md) needed and some suggested [resources](5.0.%20Development%20Resources.md) to help get you started.
+ 
+## Terminology
+The use of OAuth 2.0 terminology has been adopted in the IS-10 standard. OAuth 2.0 was originally developed for allowing web apps to access protected resource, where the web app is the Client and the protected resource is the Resource Server.  However, the NMOS Node acts as both a Client (when, for instance, registering with the NMOS Registry) AND as a Resource Server (when, for instance, accepting a connection request).  For this reason the Node is sometimes referred to as the Client and sometimes as the Resource Server depending on context.
 
-## API Structure
-
-Use this section to outline the Resources used by the API.
-
-## API Interaction
-
-Use this section e.g. to show a sequence diagram.
-
+## Specification Precedence
+This guide is not a substitute for the NMOS Specifications.  If there are any inconsistencies between this guide and the specifications, please assume that it is the specification that is correct.
