Update 4.1. Node to Authorization Server Interactions.md
Added missing formatting to HTTP example

--- a/docs/4.1. Node to Authorization Server Interactions.md
+++ b/docs/4.1. Node to Authorization Server Interactions.md
@@ -107,7 +107,7 @@ Depending on how the Authorization Server has been configured, it is likely that
 
 Example client registration request including an Initial Access Token (This is the `Authorization: Bearer` in the HTTP header):
 
-```
+```http
 POST /register HTTP/1.1
 Host: authorization-server.example.com
 Content-Type: application/json
