--- a/docs/4.3. Controller to Authorization Server Interactions.md
+++ b/docs/4.3. Controller to Authorization Server Interactions.md
@@ -193,6 +193,7 @@ Example of authorization code returned via the redirect URI (In this example the
 GET /auth/callback
 ?state=ricgtUUXODcOzifiJDnOw25rZ8wTZCxU
 &code=2b7488e0-0682-42bb-893c-9d09e60bf8...
+HTTP/1.1
 ```
 
 -  The Controller can now exchange the authorization code for the bearer
