Update 4.3. Controller to Authorization Server Interactions.md
Added missing Host to HTTP callback

--- a/docs/4.3. Controller to Authorization Server Interactions.md
+++ b/docs/4.3. Controller to Authorization Server Interactions.md
@@ -194,6 +194,7 @@ GET /auth/callback
 ?state=ricgtUUXODcOzifiJDnOw25rZ8wTZCxU
 &code=2b7488e0-0682-42bb-893c-9d09e60bf8...
 HTTP/1.1
+Host: controller.example.com
 ```
 
 -  The Controller can now exchange the authorization code for the bearer
