Removed template APIs, use main branch

--- a/docs/2.1. JSON Web Tokens (JWT).md
+++ b/docs/2.1. JSON Web Tokens (JWT).md
@@ -4,7 +4,7 @@ _(c) AMWA 2021, CC Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)_
 
 ## Access Tokens
 
-The type of [Access Token](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.4._Behaviour_-_Access_Tokens.html) used by IS-10 is the JSON Web Tokens (JWT). JWT is an open industry standard method for representing claims securely between services (RFC 7519). The claims in a JWT are encoded as a JSON object that is used as the payload of a JSON Web Signature (JWS) structure, enabling the claims to be digitally signed with `RSASSA-PKCS1-v1_5 using SHA-512`.
+The type of [Access Token](https://specs.amwa.tv/is-10/branches/main/docs/4.4._Behaviour_-_Access_Tokens.html) used by IS-10 is the JSON Web Tokens (JWT). JWT is an open industry standard method for representing claims securely between services (RFC 7519). The claims in a JWT are encoded as a JSON object that is used as the payload of a JSON Web Signature (JWS) structure, enabling the claims to be digitally signed with `RSASSA-PKCS1-v1_5 using SHA-512`.
 
 The Access Token consists of three segments, each being encoded separately using [Base64url Encoding](https://en.wikipedia.org/wiki/Base64#URL_applications "Base64"), and concatenated using periods to produce the JWT:
 
@@ -31,7 +31,7 @@ Payload contains the token claims, including when the token became active, when 
 
 #### Standard Claims
 
-The [IS-10 specification](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.4._Behaviour_-_Access_Tokens.html#registered-claims) gives details of how NMOS API Clients and Servers should use registered claims. In addition to those listed in the specification, others claims of interest are given below:
+The [IS-10 specification](https://specs.amwa.tv/is-10/branches/main/docs/4.4._Behaviour_-_Access_Tokens.html#registered-claims) gives details of how NMOS API Clients and Servers should use registered claims. In addition to those listed in the specification, others claims of interest are given below:
 
 | claim | description |
 |--|--|
