--- a/docs/3.1. Keycloak Setup.md
+++ b/docs/3.1. Keycloak Setup.md
@@ -14,15 +14,15 @@ You can get a latest version from the [Keycloak Website](https://www.keycloak.or
 - In Realm Settings, go to Tokens and select RS512 from the default signature algorithm.  
 
 ## Client Scope Config
--  Click Client Scopes and configure one or more [client scopes](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.4._Behaviour_-_Access_Tokens.html). For example, create one with a name 'registration', and a protocol of 'openid-connect'.
+-  Click Client Scopes and configure one or more [client scopes](https://specs.amwa.tv/is-10/branches/main/docs/4.4._Behaviour_-_Access_Tokens.html). For example, create one with a name 'registration', and a protocol of 'openid-connect'.
 
 ## Audience Config
-- Within the created client scope, go to the 'Mappers' tab. Add a mapper with a name you choose, with a type of 'Audience'. The value of this claim should match the intended value of the ['aud' claim](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.4._Behaviour_-_Access_Tokens.html#aud). 
+- Within the created client scope, go to the 'Mappers' tab. Add a mapper with a name you choose, with a type of 'Audience'. The value of this claim should match the intended value of the ['aud' claim](https://specs.amwa.tv/is-10/branches/main/docs/4.4._Behaviour_-_Access_Tokens.html#aud). 
 - In order to overcome the form validation, if this includes a '*' it must be copied and pasted into the field. If you require multiple audience values (using the array format), create multiple 'Audience' type mappers with different values.
 
 ## Private Claims
 - [Private claims](3.2.%20NMOS%20Private%20Claims.md) are used in NMOS to control read/write access to APIs
--  Within the 'Mappers' tab, add another mapper with a name you choose, but with a type of 'Hardcoded Claim'. This should have a Claim JSON Type of 'JSON', a Claim Name of 'x-nmos-\*' (where \* is replaced by the API name) and a Claim Value which matches the structure in [the specification](https://amwa-tv.github.io/nmos-authorization/branches/v1.0-dev/docs/4.4._Behaviour_-_Access_Tokens.html#example-x-nmos-api-claim). 
+-  Within the 'Mappers' tab, add another mapper with a name you choose, but with a type of 'Hardcoded Claim'. This should have a Claim JSON Type of 'JSON', a Claim Name of 'x-nmos-\*' (where \* is replaced by the API name) and a Claim Value which matches the structure in [the specification](https://amwa-tv.github.io/nmos-authorization/branches/main/docs/4.4._Behaviour_-_Access_Tokens.html#example-x-nmos-api-claim). 
 - To overcome the validation this needs to be copied and pasted into the field.
 
 ## Repeat for All Scopes
