--- a/docs/4.6. Validating Access Tokens.md
+++ b/docs/4.6. Validating Access Tokens.md
@@ -2,10 +2,10 @@
 # Validating Access Tokens
 _(c) AMWA 2021, CC Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)_
 
-There are number of steps needed to be considered while [validating the access token](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.5._Behaviour_-_Resource_Servers.html#validation-of-access-token). 
+There are number of steps needed to be considered while [validating the access token](https://specs.amwa.tv/is-10/branches/main/docs/4.5._Behaviour_-_Resource_Servers.html#validation-of-access-token). 
 
 - Check that the JWT is well formed , such as JWT contains three segments, header, payload and signature, and are separated by two period ('.') characters. Each segment is base64url encoded.    
-- Verify the signature, by generating a new Base64url-encoded signature using the issuer public key and verify that it matches the original Signature, to ensure token has not been tampered.  In event if the issuer [public key](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.5._Behaviour_-_Resource_Servers.html#public-keys) has not been known, it should attempt to obtain the missing public key via the the token `iss` claim as specified in [RFC 8414](https://tools.ietf.org/html/rfc8414 "OAuth 2.0 Authorization Server Metadata") section 3, and temporarily respond with an HTTP 503 code in order to avoid blocking the incoming authorized request.
+- Verify the signature, by generating a new Base64url-encoded signature using the issuer public key and verify that it matches the original Signature, to ensure token has not been tampered.  In event if the issuer [public key](https://specs.amwa.tv/is-10/branches/main/docs/4.5._Behaviour_-_Resource_Servers.html#public-keys) has not been known, it should attempt to obtain the missing public key via the the token `iss` claim as specified in [RFC 8414](https://tools.ietf.org/html/rfc8414 "OAuth 2.0 Authorization Server Metadata") section 3, and temporarily respond with an HTTP 503 code in order to avoid blocking the incoming authorized request.
 - Check the standard claims, such as token expiration `exp` and token audience `aud`.
 - Check the private claims, to verify whether it has permission for accessing the API.
 
