--- a/docs/1.0. Overview.md
+++ b/docs/1.0. Overview.md
@@ -17,7 +17,7 @@ If you receive an authenticated API call you will need to check that the [token 
 There is some [prerequisite knowledge](2.0.%20Prerequisites.md) needed and some suggested [resources](5.0.%20Development%20Resources.md) to help get you started.
  
 ## Terminology
-The use of OAuth 2.0 terminology has been adopted in the IS-10 standard. OAuth 2.0 was originally developed for allowing web apps to access protected resource, where the web app is the Client and the protected resource is the Resource Server.  However, the NMOS Node acts as both a Client (when, for instance, registering with the NMOS Registry) AND as a Resource Server (when, for instance, accepting a connection request).  For this reason the Node is sometimes referred to as the Client and sometimes as the Resource Server depending on context.
+The use of OAuth 2.0 terminology has been adopted in the IS-10 standard. OAuth 2.0 was originally developed for allowing web apps to access protected resources, where the web app is the Client and the protected resource is the Resource Server.  However, the NMOS Node acts as both a Client (when, for instance, registering with the NMOS Registry) AND as a Resource Server (when, for instance, accepting a connection request).  For this reason the Node is sometimes referred to as the Client and sometimes as the Resource Server depending on context.
 
 ## Specification Precedence
 This guide is not a substitute for the NMOS Specifications.  If there are any inconsistencies between this guide and the specifications, please assume that it is the specification that is correct.
