--- a/docs/2.0. Prerequisites.md
+++ b/docs/2.0. Prerequisites.md
@@ -12,7 +12,7 @@ If your NMOS Node implements the IS-08 API then it is assumed that you are famil
 ### [IS-07 Event & Tally](https://specs.amwa.tv/is-07/)
 If your NMOS Node implements the IS-07 API then it is assumed you are familiar with the standard and have a working implementation of IS-07 for your NMOS Node. 
 ### [IS-10 Authorization](https://specs.amwa.tv/is-10/)
-It's the reason you're here! This guide will detail implementation of IS-10 in NMOS nodes and Controllers for IS-04, IS-05, IS-07 and IS-08 API calls, so a some familiarity with the standard is assumed.
+It's the reason you're here! This guide will detail implementation of IS-10 in NMOS Nodes and Controllers for IS-04, IS-05, IS-07 and IS-08 API calls, so some familiarity with the standard is assumed.
 
 ## NMOS Best Current Practices
 ### [AMWA BCP-003-02: Authorization in NMOS Systems](https://specs.amwa.tv/bcp-003-02/)
@@ -21,7 +21,7 @@ This document describes how to implement a general OAuth 2.0 authorization syste
 ## OAuth 2.0
 Given that IS-10 is based on OAuth 2.0, a familiarity with the way OAuth 2.0 authorization works is required.  The authorization flows used by IS-10 are the Client Credentials Grant and the Authentication Code Flow. The former is generally implemented by NMOS Nodes, and the latter is implemented by NMOS Controllers.
 
-The following four part series of articles give a good grounding in OAuth 2.0; the first three give an overview of OAuth 2.0 and JWT independent of implementation language. The fourth article is specific to Java implementations.
+The following four part series of articles gives a good grounding in OAuth 2.0; the first three give an overview of OAuth 2.0 and JWT independent of implementation language. The fourth article is specific to Java implementations.
 
 - [Deep Dive Into OAuth 2.0 and JWT (Part 1 Setting the
    Stage)](https://dzone.com/articles/deep-dive-to-oauth20-amp-jwt-part-1-setting-the-st
