Update 2.1. JSON Web Tokens (JWT).md
Minor typos and capitalisation changes. Also moved Signature heading up a level to match Header and Payload.

--- a/docs/2.1. JSON Web Tokens (JWT).md
+++ b/docs/2.1. JSON Web Tokens (JWT).md
@@ -18,7 +18,7 @@ JWTs can be straightforwardly introspected using tools such as the [JWT.io debug
 
 ### Header
 
-The Header is used to identify which algorithm was used to generate the signature. The `alg` field in the header MUST be set to RS512.
+The Header is used to identify which algorithm was used to generate the Signature. The `alg` field in the header MUST be set to RS512.
 ```json
 {
   "alg": "RS512",
@@ -27,7 +27,7 @@ The Header is used to identify which algorithm was used to generate the signatur
 ```
 ### Payload
 
-Payload contains the token claims, including when the token became active, when they are due to expire, who the token is intended for, and some other standard registered claims. 
+The Payload contains the token claims, including when the token became active, when it is due to expire, who the token is intended for, and some other standard registered claims. 
 
 #### Standard Claims
 
@@ -39,8 +39,8 @@ The [IS-10 specification](https://specs.amwa.tv/is-10/branches/main/docs/4.4._Be
 | jti | The `jti` (JWT ID) claim MAY be included in the token.  It is a case sensitive unique identifier of the token even among different issuers. |
 
 #### Private Claims
-IS-10 has introduced some NMOS related private claims, which are related to the NMOS scopes.  These are configured in the Authorization Server and are  covered in more detail in [that section](3.2.%20NMOS%20Private%20Claims.md).
+IS-10 has introduced some NMOS related private claims, which are related to the NMOS scopes.  These are configured in the Authorization Server and are covered in more detail in [that section](3.2.%20NMOS%20Private%20Claims.md).
 
-#### Signature
+### Signature
 
-The signature is created by encoding the Header and Payload using Base64url encoding, then run through the cryptographic algorithm specified in the header with the issuer private key.
+The Signature is created by encoding the Header and Payload using Base64url encoding, then run through the cryptographic algorithm specified in the Header with the issuer private key.
