--- a/docs/4.3. Controller to Authorization Server Interactions.md
+++ b/docs/4.3. Controller to Authorization Server Interactions.md
@@ -11,7 +11,7 @@ This section details the interactions between an NMOS Controller and the Authori
 
 ![Node to Authorization Interactions](../docs/images/authorization_flow.png)
 
-The sequence diagram above gives an overview of these interaction which are described in more detail below.
+The sequence diagram above gives an overview of these interactions which are described in more detail below.
 ## Discovery of the Authorization Server
 In order to interact with the Authorization Server, you need to know where it is.  IS-10 specifies that the [Authorization Server should use unicast DNS-SD](https://specs.amwa.tv/is-10/branches/main/docs/3.0._Discovery.html#dns-sd-advertisemen) to advertise itself to the  Controller.
 
@@ -107,7 +107,7 @@ Depending on how the Authorization Server has been configured, it is likely that
 
 Example public client registration request including an Initial Access Token (This is the `Authorization: Bearer` in the HTTP header):
 
-_NOTE: The parameters passed as part of the dynamic client registration of NMOS Controllers is different to those passed when registering an NMOS Nodes._
+_NOTE: The parameters passed as part of the dynamic client registration of NMOS Controllers is different to those passed when registering an NMOS Node._
 ```http
 POST /register HTTP/1.1
 Host: authorization-server.example.com
@@ -181,7 +181,7 @@ HTTP/1.1
 Host: authorization-server.example.com
 ```
 
-- The Authorization Server will redirects the client to the login and
+- The Authorization Server will redirect the client to the login and
    authorization prompt.
 - The Controller operator can then login and give consent on the
    Authorization Server for the Controller.
