Update 4.3. Controller to Authorization Server Interactions.md
Change Authentication Code Flow to Authorization Code Flow

--- a/docs/4.3. Controller to Authorization Server Interactions.md
+++ b/docs/4.3. Controller to Authorization Server Interactions.md
@@ -155,12 +155,12 @@ Content-Type: application/json
 }
 ```
 
-## Authentication Code Flow
+## Authorization Code Flow
 NMOS Controllers are OAuth 2.0 [public clients](https://specs.amwa.tv/is-10/branches/main/docs/4.2._Behaviour_-_Clients.html#user-agent-based--browser-applications) which means they cannot securely store the Client Secret.
 
 To accommodate these public clients, OAuth 2.0 provides a version of the Authorization Code Flow which makes use of a Proof Key for Code Exchange (PKCE) (defined in [OAuth 2.0 RFC 7636](https://tools.ietf.org/html/rfc7636)). 
 
-- To start the Authentication Code Flow, in place of a Client Secret,
+- To start the Authorization Code Flow, in place of a Client Secret,
    the Controller generates a cryptographically-random
    [`code_verifier`](https://specs.amwa.tv/is-10/branches/main/docs/4.3._Behaviour_-_Token_Requests.html#authorization-request-and-response) which is used to generate a  [`code_challenge`](https://specs.amwa.tv/is-10/branches/main/docs/4.3._Behaviour_-_Token_Requests.html#authorization-request-and-response)
    value. 
