Update 4.4. Controller to Node Interactions (IS-05, IS-08).md
Minor capitalisation changes

--- a/docs/4.4. Controller to Node Interactions (IS-05, IS-08).md
+++ b/docs/4.4. Controller to Node Interactions (IS-05, IS-08).md
@@ -4,10 +4,10 @@ _(c) AMWA 2021, CC Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)_
 ## Creating an IS-05 Connection
 To create a connection between an NMOS Sender and Receiver the Controller must first query the NMOS Registry to obtain all registered NMOS Node resources.
 
-Then it can create a connection between senders and receivers using the [IS-05](https://specs.amwa.tv/is-05/releases/v1.1/docs/1.0._Overview.html) API.
+Then it can create a connection between Senders and Receivers using the [IS-05](https://specs.amwa.tv/is-05/releases/v1.1/docs/1.0._Overview.html) API.
 
 ### Querying the NMOS Registry
-The Controller uses the [IS-04](https://specs.amwa.tv/is-04/releases/v1.3/docs/1.0._Overview.html) Query API to obtain a list of all registered NMOS nodes resources from the NMOS Registry.  This API call includes a valid Access Token in the HTTP header.
+The Controller uses the [IS-04](https://specs.amwa.tv/is-04/releases/v1.3/docs/1.0._Overview.html) Query API to obtain a list of all registered NMOS Node resources from the NMOS Registry.  This API call includes a valid Access Token in the HTTP header.
 
 ![Controller to Registry](../docs/images/controller_to_registry.png)
 
@@ -63,18 +63,18 @@ Content-Type: application/json
 ]
 ```
 ### Connection Management
-Once the Controller has obtained the NMOS  resource list, it can use the [IS-05](https://specs.amwa.tv/is-05/releases/v1.1/docs/1.0._Overview.html) Connection API to request the sender's SDP and make connections between receivers and senders.
+Once the Controller has obtained the NMOS resource list, it can use the [IS-05](https://specs.amwa.tv/is-05/releases/v1.1/docs/1.0._Overview.html) Connection API to request the Sender's SDP and make connections between Receivers and Senders.
 
 #### SDP Request 
 ![Controller to Registry](../docs/images/controller_to_nodes.png)
 
-Example sender SDP request including Access Token (`Authorization: Bearer`) in the HTTP header:
+Example Sender SDP request including Access Token (`Authorization: Bearer`) in the HTTP header:
 ```http
 GET /x-nmos/connection/v1.1/single/senders/{senderId}/transportfile HTTP/1.1
 Host: node.example.com
 Authorization: Bearer eyJhbGciOiJSUzUxMiIsInR5cCIgOiAiSl...
 ```
-Example sender SDP response:
+Example Sender SDP response:
 ```http
 HTTP/1.1 200 OK
 Content-Type: application/sdp
@@ -148,7 +148,7 @@ Content-Type: application/json
 ```
 
 ## Mapping Audio Channels (IS-08)
-The purpose of using [IS-08](https://specs.amwa.tv/is-08/releases/v1.0.1/docs/1.0._Overview.html) API is to allow mapping of  one or more audio “Inputs” to one or more audio “Outputs”.
+The purpose of using [IS-08](https://specs.amwa.tv/is-08/releases/v1.0.1/docs/1.0._Overview.html) API is to allow mapping of one or more audio “Inputs” to one or more audio “Outputs”.
 
 Example mapping request including Access Token (`Authorization: Bearer`) in the HTTP header:
 ```http
