Update 4.5. Event and Tally Interactions (IS-07).md
Capitalisation change

--- a/docs/4.5. Event and Tally Interactions (IS-07).md
+++ b/docs/4.5. Event and Tally Interactions (IS-07).md
@@ -36,7 +36,7 @@ Access to all IS-07 Source IDs can be requested with a token claim as follows.
 
 ## IS-07 WebSocket Events
 
-The WebSocket Uri for an IS-07 NMOS Device exposed in the `connection_uri` parameter can be accessed in an authorized way by:
+The WebSocket URI for an IS-07 NMOS Device exposed in the `connection_uri` parameter can be accessed in an authorized way by:
 
 * including the Access Token (`Authorization: Bearer`) in the HTTP header of the request that initiates the WebSocket handshake
 * passing the Access Token as a query parameter (`ws://hostname/x-nmos/events/v1.0/devices/58f6b536-ca4c-43fd-880a-9df2501fc125?access_token=eyJhbGciOiJSUzUxMiIsInR5cCIgOiAiSl...`) - only for situations in which it is not feasible to pass the token in the HTTP Authorization Header.
