--- a/docs/2.0. Prerequisites.md
+++ b/docs/2.0. Prerequisites.md
@@ -5,21 +5,21 @@ _(c) AMWA 2021, CC Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)_
 Before using this guide, you should be familiar with the following specifications and technologies.
   
 ## NMOS Interface Specifications
-### [IS-04 Registration & Discovery](https://specs.amwa.tv/is-04/) & [IS-05 Connection Management](https://specs.amwa.tv/is-05/)
+### [IS-04 Discovery & Registration](https://specs.amwa.tv/is-04/) and [IS-05 Device Connection Management](https://specs.amwa.tv/is-05/)
 As well as a familiarity with the standards, it is also assumed that you already have a working implementation of IS-04 and IS-05 for your NMOS Node.
-### [IS-08 Audio Channel Mapping](https://specs.amwa.tv/is-08/)
-If your NMOS Node implements the IS-08 API then it is assumed that you are familiar with the standard and have a working implementation of IS-08 for your NMOS Node.
 ### [IS-07 Event & Tally](https://specs.amwa.tv/is-07/)
-If your NMOS Node implements the IS-07 API then it is assumed you are familiar with the standard and have a working implementation of IS-07 for your NMOS Node. 
+If your NMOS Node implements the Events API then it is assumed that you are familiar with the specification and have a working implementation of IS-07 for your NMOS Node. 
+### [IS-08 Audio Channel Mapping](https://specs.amwa.tv/is-08/)
+If your NMOS Node implements the Channel Mapping API then it is assumed that you are familiar with the specification and have a working implementation of IS-08 for your NMOS Node.
 ### [IS-10 Authorization](https://specs.amwa.tv/is-10/)
-It's the reason you're here! This guide will detail implementation of IS-10 in NMOS nodes and Controllers for IS-04, IS-05, IS-07 and IS-08 API calls, so a some familiarity with the standard is assumed.
+It's the reason you're here! This guide will detail implementation of IS-10 in NMOS nodes and Controllers for IS-04, IS-05, IS-07 and IS-08 API calls, so some familiarity with this specification is assumed.
 
 ## NMOS Best Current Practices
-### [AMWA BCP-003-02: Authorization in NMOS Systems](https://specs.amwa.tv/bcp-003-02/)
+### [BCP-003-02 Authorization in NMOS Systems](https://specs.amwa.tv/bcp-003-02/)
 This document describes how to implement a general OAuth 2.0 authorization system, in line with current best practices. This document outlines additional requirements placed upon Resource Servers and Clients which implement or interact with specific NMOS Interface Specifications.
   
 ## OAuth 2.0
-Given that IS-10 is based on OAuth 2.0, a familiarity with the way OAuth 2.0 authorization works is required.  The authorization flows used by IS-10 are the Client Credentials Grant and the Authentication Code Flow. The former is generally implemented by NMOS Nodes, and the latter is implemented by NMOS Controllers.
+Given that IS-10 is based on OAuth 2.0, a familiarity with the way OAuth 2.0 authorization works is required. The authorization flows used by IS-10 are the Client Credentials Grant and the Authentication Code Flow. The former is generally implemented by NMOS Nodes, and the latter is implemented by NMOS Controllers.
 
 The following four part series of articles give a good grounding in OAuth 2.0; the first three give an overview of OAuth 2.0 and JWT independent of implementation language. The fourth article is specific to Java implementations.
 
