Removed registered claims already detailed in the specification. Minor typos.

--- a/docs/2.1. JSON Web Tokens (JWT).md
+++ b/docs/2.1. JSON Web Tokens (JWT).md
@@ -29,17 +29,12 @@ The Header is used to identify which algorithm was used to generate the signatur
 
 Payload contains the token claims, including when the token became active, when they are due to expire, who the token is intended for, and some other standard registered claims. 
 
-#### Standard Claims
+#### Registered Claims
 
-The [IS-10 specification](https://specs.amwa.tv/is-10/branches/main/docs/4.4._Behaviour_-_Access_Tokens.html#registered-claims) gives details of how NMOS API Clients and Servers should use registered claims. In addition to those listed in the specification, others claims of interest are given below:
-
-| claim | description |
-|--|--|
-| nbf | The `nbf` (not before) claim MAY be included in the token.  It identifies the time on which the JWT will start to be accepted for processing. This is defined in  [RFC 7519](https://tools.ietf.org/html/rfc7519 "JSON Web Token (JWT)"). |
-| jti | The `jti` (JWT ID) claim MAY be included in the token.  It is a case sensitive unique identifier of the token even among different issuers. |
+The [IS-10 specification](https://specs.amwa.tv/is-10/branches/main/docs/4.4._Behaviour_-_Access_Tokens.html#registered-claims) gives details of how NMOS API Clients and Servers should use registered claims.
 
 #### Private Claims
-IS-10 has introduced some NMOS related private claims, which are related to the NMOS scopes.  These are configured in the Authorization Server and are  covered in more detail in [that section](3.2.%20NMOS%20Private%20Claims.md).
+IS-10 has introduced some NMOS related private claims, which are related to the NMOS scopes.  These are configured in the Authorization Server and are covered in more detail in [that section](3.2.%20NMOS%20Private%20Claims.md).
 
 #### Signature
 
