Update 4.0. Implementing Authenticated API Calls.md
Changed to be consistent with #10

--- a/docs/4.0. Implementing Authenticated API Calls.md
+++ b/docs/4.0. Implementing Authenticated API Calls.md
@@ -19,7 +19,7 @@ This section covers:
 - Registering your Controller as a Client of the Authorization Server
 - Obtaining Access Tokens for Authenticated API calls 
 
-### [Controller to Registry / Node Interactions (IS-04, IS-05, IS-08)](4.4.%20Controller%20to%20Node%20Interactions%20(IS-05%2C%20IS-08).md)
+### [Controller to Registry (IS-04) and Node Interactions (IS-05, IS-08)](4.4.%20Controller%20to%20Node%20Interactions%20(IS-05%2C%20IS-08).md)
 This section covers:
 - Authenticated querying of Registry
 - Authenticated connection management
