--- a/docs/2.1. JSON Web Tokens (JWT).md
+++ b/docs/2.1. JSON Web Tokens (JWT).md
@@ -31,12 +31,7 @@ The Payload contains the token claims, including when the token became active, w
 
 #### Registered Claims
 
-The [IS-10 specification](https://specs.amwa.tv/is-10/branches/main/docs/4.4._Behaviour_-_Access_Tokens.html#registered-claims) gives details of how NMOS API Clients and Servers should use registered claims. In addition to those listed in the specification, other claims of interest are given below:
-
-| claim | description |
-|--|--|
-| nbf | The `nbf` (not before) claim MAY be included in the token. It identifies the time on which the JWT will start to be accepted for processing. This is defined in [RFC 7519](https://tools.ietf.org/html/rfc7519 "JSON Web Token (JWT)"). |
-| jti | The `jti` (JWT ID) claim MAY be included in the token. It is a case-sensitive unique identifier of the token even across different issuers. |
+The [IS-10 specification](https://specs.amwa.tv/is-10/branches/main/docs/4.4._Behaviour_-_Access_Tokens.html#registered-claims) gives details of how NMOS API Clients and Servers should use registered claims.
 
 #### Private Claims
 
