Update 3.1. Keycloak Setup.md
Full stops.

--- a/docs/3.1. Keycloak Setup.md
+++ b/docs/3.1. Keycloak Setup.md
@@ -7,7 +7,7 @@ We've used Keycloak to illustrate the basic configuration necessary for IS-10 Au
 
 ## Setup Procedure
 ### Install Keycloak
-You can get a latest version from the [Keycloak Website](https://www.keycloak.org/getting-started)
+You can get a latest version from the [Keycloak website](https://www.keycloak.org/getting-started).
 
 ## Configure Realms
 - You need to set up a realm to work within (or use the default one for testing).  
@@ -21,12 +21,12 @@ You can get a latest version from the [Keycloak Website](https://www.keycloak.or
 - In order to overcome the form validation, if this includes a '*' it must be copied and pasted into the field. If you require multiple audience values (using the array format), create multiple 'Audience' type mappers with different values.
 
 ## Private Claims
-- [Private claims](3.2.%20NMOS%20Private%20Claims.md) are used in NMOS to control read/write access to APIs
+- [Private claims](3.2.%20NMOS%20Private%20Claims.md) are used in NMOS to control read/write access to APIs.
 -  Within the 'Mappers' tab, add another mapper with a name you choose, but with a type of 'Hardcoded Claim'. This should have a Claim JSON Type of 'JSON', a Claim Name of 'x-nmos-\*' (where \* is replaced by the API name) and a Claim Value which matches the structure in [the specification](https://amwa-tv.github.io/nmos-authorization/branches/main/docs/4.4._Behaviour_-_Access_Tokens.html#example-x-nmos-api-claim). 
 - To overcome the validation this needs to be copied and pasted into the field.
 
 ## Repeat for All Scopes
-- Repeat the previous three steps for each 'scope' supported. Note that in this limited implementation case you should use the same Claim Value for all 'x-nmos-\*' claims, covering the fully range of supported scopes. This is hacky, but provides a simpler proof of concept than the alternative [script provider mechanism](https://www.keycloak.org/docs/latest/server_development/#_script_providers).
+- Repeat the previous three steps for each 'scope' supported. Note that in this limited implementation case you should use the same Claim Value for all 'x-nmos-\*' claims, covering the full range of supported scopes. This is hacky, but provides a simpler proof of concept than the alternative [script provider mechanism](https://www.keycloak.org/docs/latest/server_development/#_script_providers).
 - In Client Scopes, click the Default Client Scopes tab. Move all of the default and optional scopes which are already on the right hand side (enabled) to the left (disabled). Then move all of the created NMOS scopes from the 'Optional Client Scopes' available list, into the 'Assigned Optional Client Scopes' list.
 
 ## Setup Trusted Hosts
