--- a/docs/3.1. Keycloak Setup.md
+++ b/docs/3.1. Keycloak Setup.md
@@ -14,7 +14,7 @@ You can get a latest version from the [Keycloak website](https://www.keycloak.or
 - In Realm Settings, go to Tokens and select RS512 from the default signature algorithm.  
 
 ## Client Scope Config
--  Click Client Scopes and configure one or more [client scopes](https://specs.amwa.tv/is-10/branches/main/docs/4.4._Behaviour_-_Access_Tokens.html). For example, create one with a name 'registration', and a protocol of 'openid-connect'.
+-  Click Client Scopes and configure one or more [client scopes](https://specs.amwa.tv/is-10/branches/main/docs/4.4._Behaviour_-_Access_Tokens.html). For example, create one with a name 'registration' (for the IS-04 Registration API), and a protocol of 'openid-connect'.
 
 ## Audience Config
 - Within the created client scope, go to the 'Mappers' tab. Add a mapper with a name you choose, with a type of 'Audience'. The value of this claim should match the intended value of the ['aud' claim](https://specs.amwa.tv/is-10/branches/main/docs/4.4._Behaviour_-_Access_Tokens.html#aud). 
@@ -22,11 +22,11 @@ You can get a latest version from the [Keycloak website](https://www.keycloak.or
 
 ## Private Claims
 - [Private claims](3.2.%20NMOS%20Private%20Claims.md) are used in NMOS to control read/write access to APIs.
--  Within the 'Mappers' tab, add another mapper with a name you choose, but with a type of 'Hardcoded Claim'. This should have a Claim JSON Type of 'JSON', a Claim Name of 'x-nmos-\*' (where \* is replaced by the API name) and a Claim Value which matches the structure in [the specification](https://amwa-tv.github.io/nmos-authorization/branches/main/docs/4.4._Behaviour_-_Access_Tokens.html#example-x-nmos-api-claim). 
+-  Within the 'Mappers' tab, add another mapper with a name you choose, but with a type of 'Hardcoded Claim'. This should have a Claim JSON Type of 'JSON', a Claim Name of 'x-nmos-\<api\>' (where '\<api\>' is the API/scope name such as 'registration') and a Claim Value which matches the structure in [the specification](https://amwa-tv.github.io/nmos-authorization/branches/main/docs/4.4._Behaviour_-_Access_Tokens.html#example-x-nmos-api-claim). 
 - To overcome the validation this needs to be copied and pasted into the field.
 
 ## Repeat for All Scopes
-- Repeat the previous three steps for each 'scope' supported. Note that in this limited implementation case you should use the same Claim Value for all 'x-nmos-\*' claims, covering the full range of supported scopes. This is hacky, but provides a simpler proof of concept than the alternative [script provider mechanism](https://www.keycloak.org/docs/latest/server_development/#_script_providers).
+- Repeat the previous three steps for each 'scope' supported. Note that in this limited implementation case you should use the same Claim Value for all 'x-nmos-\<api\>' claims, covering the full range of supported scopes. This is hacky, but provides a simpler proof of concept than the alternative [script provider mechanism](https://www.keycloak.org/docs/latest/server_development/#_script_providers).
 - In Client Scopes, click the Default Client Scopes tab. Move all of the default and optional scopes which are already on the right hand side (enabled) to the left (disabled). Then move all of the created NMOS scopes from the 'Optional Client Scopes' available list, into the 'Assigned Optional Client Scopes' list.
 
 ## Setup Trusted Hosts
