Fix URLs for IS-10 spec

--- a/docs/3.1. Keycloak Setup.md
+++ b/docs/3.1. Keycloak Setup.md
@@ -14,10 +14,10 @@ You can get a latest version from the [Keycloak Website](https://www.keycloak.or
 - In Realm Settings, go to Tokens and select RS512 from the default signature algorithm.  
 
 ## Client Scope Config
--  Click Client Scopes and configure one or more [client scopes](https://specs.amwa.tv/is-10/branches/main/docs/4.4._Behaviour_-_Access_Tokens.html). For example, create one with a name 'registration', and a protocol of 'openid-connect'.
+-  Click Client Scopes and configure one or more [client scopes](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.4._Behaviour_-_Access_Tokens.html). For example, create one with a name 'registration', and a protocol of 'openid-connect'.
 
 ## Audience Config
-- Within the created client scope, go to the 'Mappers' tab. Add a mapper with a name you choose, with a type of 'Audience'. The value of this claim should match the intended value of the ['aud' claim](https://specs.amwa.tv/is-10/branches/main/docs/4.4._Behaviour_-_Access_Tokens.html#aud). 
+- Within the created client scope, go to the 'Mappers' tab. Add a mapper with a name you choose, with a type of 'Audience'. The value of this claim should match the intended value of the ['aud' claim](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.4._Behaviour_-_Access_Tokens.html#aud). 
 - In order to overcome the form validation, if this includes a '*' it must be copied and pasted into the field. If you require multiple audience values (using the array format), create multiple 'Audience' type mappers with different values.
 
 ## Private Claims
