More whitespace etc.

--- a/docs/4.3. Controller to Authorization Server Interactions.md
+++ b/docs/4.3. Controller to Authorization Server Interactions.md
@@ -1,4 +1,3 @@
-
 # Controller to Authorization Server Interactions
 _(c) AMWA 2021, CC Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)_
 ## Overview
@@ -12,6 +11,7 @@ This section details the interactions between an NMOS Controller and the Authori
 ![Node to Authorization Interactions](../docs/images/authorization_flow.png)
 
 The sequence diagram above gives an overview of these interactions which are described in more detail below.
+
 ## Discovery of the Authorization Server
 In order to interact with the Authorization Server, you need to know where it is. IS-10 specifies that the [Authorization Server should use unicast DNS-SD](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/3.0._Discovery.html#dns-sd-advertisemen) to advertise itself to the  Controller.
 
@@ -23,7 +23,9 @@ Example request to get server metadata:
 GET /.well-known/oauth-authorization-server HTTP/1.1
 Host: authorization-server.example.com
 ```
+
 Example server metadata HTTP response:
+
 ```http
 HTTP/1.1 200 OK
 Content-Type: application/json
@@ -98,6 +100,7 @@ Content-Type: application/json
   ]
 }
 ```
+
 ## Client Registration
 The NMOS Controller first needs to register with the Authorization Server. This is usually a one time operation that a Controller would typically perform when first activated on the network.
 
@@ -107,7 +110,8 @@ Depending on how the Authorization Server has been configured, it is likely that
 
 Example public client registration request including an Initial Access Token (This is the `Authorization: Bearer` in the HTTP header):
 
-_NOTE: The parameters passed as part of the dynamic client registration of NMOS Controllers is different to those passed when registering an NMOS Node._
+_NOTE: The parameters passed as part of the dynamic client registration of NMOS Controllers are different to those passed when registering an NMOS Node._
+
 ```http
 POST /register HTTP/1.1
 Host: authorization-server.example.com
@@ -131,7 +135,9 @@ Authorization: Bearer eyJhbGciOiJIUzI1NiIsInR5cCIg...
   "token_endpoint_auth_method": "none"
 }
 ```
+
 Example response:
+
 ```http
 HTTP/1.1 201 Created
 Content-Type: application/json
@@ -168,6 +174,7 @@ To accommodate these public clients, OAuth 2.0 provides a version of the Authori
    [`/authorize`](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/2.0._APIs.html#authorization-endpoints) passing the `code_challenge` as a parameter.
 
 Example request to start authorization code flow:
+
 ```http
 GET /authorize
 ?client_id=30baf617-1744-4c24-9baf-22351bec1a73
@@ -189,6 +196,7 @@ Host: authorization-server.example.com
    Controller via the registered redirect URI, passing the authorization code as a parameter.
 
 Example of authorization code returned via the redirect URI (In this example the authorization code is passed in the `code` parameter):
+
 ```http
 GET /auth/callback
 ?state=ricgtUUXODcOzifiJDnOw25rZ8wTZCxU
@@ -202,6 +210,7 @@ Host: controller.example.com
    the Authorization Server.
 
 Example request to exchange authorization code for bearer token. (In this request the `code` is the authorization code):
+
 ```http
 POST /token HTTP/1.1
 Host: authorization-server.example.com
@@ -218,6 +227,7 @@ client_id=30baf617-1744-4c24-9baf-22351bec1a73
 
 
 Example token response:
+
 ```http
 HTTP/1.1 200 OK
 Content-Type: application/json
@@ -239,6 +249,7 @@ The Bearer Token has a limited life specified by the value of the `expires_in` p
 Because refresh tokens have the potential for a long lifetime, developers should ensure that strict storage requirements are in place to keep them from being leaked.
 
 Example request to refresh bearer token:
+
 ```http
 POST /token HTTP/1.1
 Host: authorization-server.example.com
@@ -250,9 +261,10 @@ client_id=30baf617-1744-4c24-9baf-22351bec1a73
 &refresh_token=eyJhbGciOiJIUzI1NiIsInR5cCIgOiAiSldUIiwia...
 ```
 
-In this request the `refresh_token` was previously got from the bearer token.
+In this request the `refresh_token` was previously obtained from the bearer token.
 
 Example token response:
+
 ```http
 HTTP/1.1 200 OK
 Content-Type: application/json
