--- a/docs/4.5. Event and Tally Interactions (IS-07).md
+++ b/docs/4.5. Event and Tally Interactions (IS-07).md
@@ -1,4 +1,3 @@
-
 # Event & Tally (IS-07)
 _(c) AMWA 2021, CC Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)_
 
@@ -8,7 +7,7 @@ IS-10 adds security to the traditional Event and Tally HTTP requests.
 
 ## IS-07 Events API
 
-The `Events API` exposed by an IS-07 NMOS Device in the controls array under `urn:x-nmos:control:events/v1.0` can be accessed in an authorized way by including the Access Token (`Authorization: Bearer`) in the HTTP header.
+The Events API exposed by an IS-07 NMOS Device in the controls array under `urn:x-nmos:control:events/v1.0` can be accessed in an authorized way by including the Access Token (`Authorization: Bearer`) in the HTTP header.
 
 ```http
 GET /x-nmos/events/v1.0/sources/{sourceId} HTTP/1.1
