Removed normative language and replaced with link to relevant part of BCP-003-02

--- a/docs/4.5. Event and Tally Interactions (IS-07).md
+++ b/docs/4.5. Event and Tally Interactions (IS-07).md
@@ -40,26 +40,7 @@ The WebSocket URI for an IS-07 NMOS Device exposed in the `connection_uri` param
 * including the Access Token (`Authorization: Bearer`) in the HTTP header of the request that initiates the WebSocket handshake
 * passing the Access Token as a query parameter (`ws://hostname/x-nmos/events/v1.0/devices/58f6b536-ca4c-43fd-880a-9df2501fc125?access_token=eyJhbGciOiJSUzUxMiIsInR5cCIgOiAiSl...`) - only for situations in which it is not feasible to pass the token in the HTTP Authorization Header.
 
-The IS-07 NMOS Node/Device hosting the WebSocket server shall support Authorization using either of the above mechanisms.
-
-The Access Token must contain the read claim matching all Source paths which are to be returned by the WebSocket.
-
-For example, access to the IS-07 Source IDs '9f463872-9621-4939-aa3a-dc3c82d8578b' and '7f87027c-ebb4-4640-b878-14952915249a' would require token claims as follows.
-
-```json
-"x-nmos-events": {
-  "read": ["sources/9f463872-9621-4939-aa3a-dc3c82d8578b",
-           "sources/7f87027c-ebb4-4640-b878-14952915249a"]
-}
-```
-
-Access to all IS-07 Source IDs can be requested with a token claim as follows.
-
-```json
-"x-nmos-events": {
-  "read": ["sources/*"]
-}
-```
+Further details on WebSocket authorization can be found in [BCP-003-02](https://specs.amwa.tv/bcp-003-02/branches/v1.0-dev/docs/1.0._Authorization_Practice.html#is-07---event-and-tally).
 
 ## IS-07 MQTT Events
 
