Made association with links in sentence more explicit.

--- a/docs/1.0. Overview.md
+++ b/docs/1.0. Overview.md
@@ -5,7 +5,7 @@ _(c) AMWA 2021, CC Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)_
 This document is intended as a guide for implementers who want to add NMOS Authorization to their NMOS Nodes and Controllers.
 
 ## Adding Authentication to API Calls
-IS-10 authorization is based on OAuth 2.0 and so adding authorization to your IS-04, IS-05, IS-07 and IS-08 API calls simply involves [adding an Access Token](4.2.%20Node%20to%20Registry%20Interactions%20(IS-04).md) to the [HTTP header of your requests](4.4.%20Controller%20to%20Node%20Interactions%20(IS-05%2C%20IS-08).md).
+IS-10 authorization is based on OAuth 2.0 and so adding authorization to your IS-04, IS-05, IS-07 and IS-08 API calls simply involves adding an Access Token to the HTTP header of your requests, whether that be for an [NMOS Node](4.2.%20Node%20to%20Registry%20Interactions%20(IS-04).md) or an [NMOS Controller](4.4.%20Controller%20to%20Node%20Interactions%20(IS-05%2C%20IS-08).md).
 
 ## Getting an Access Token
 Both [NMOS Nodes](4.1.%20Node%20to%20Authorization%20Server%20Interactions.md) and [Controllers](4.3.%20Controller%20to%20Authorization%20Server%20Interactions.md) can retrieve Access Tokens from an [Authorization Server](3.0.%20Authorization%20Server%20Setup.md).
