Tweaked section headings for readability

--- a/docs/4.1. Node to Authorization Server Interactions.md
+++ b/docs/4.1. Node to Authorization Server Interactions.md
@@ -3,17 +3,17 @@ _(c) AMWA 2021, CC Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)_
 ## Overview
 This section details the interactions between an NMOS Node and the Authorization Server. These include:
 
-- **Discovery of the Authorization Server**
+- **Authorization Server Discovery**
 - **Client Registration**: Registration of the NMOS Node with the Authorization Server.
 - **Client Credentials Flow**: Request of an Access Token from the Authorization Server.
-- **Refreshing the Bearer Token**: Ensuring the token is always valid
-- **Fetch Authorization Server Public Keys**: To authenticate Access Tokens in incoming API calls.
+- **Refreshing Bearer Tokens**: Ensuring the token is always valid
+- **Fetching Authorization Server Public Keys**: To authenticate Access Tokens in incoming API calls.
 
 ![Node to Authorization Interactions](../docs/images/client_credentials_flow.png)
 
 The sequence diagram above gives an overview of these interactions which are described in more detail below.
 
-## Discovery of the Authorization Server
+## Authorization Server Discovery
 In order to interact with the Authorization Server, you need to know where it is. IS-10 specifies that the [Authorization Server should use unicast DNS-SD](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/3.0._Discovery.html#dns-sd-advertisemen) to advertise itself to the Node.
 
 Once the Node knows the whereabouts of the Authorization Server it can then fetch the [Authorization Server Metadata](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/3.0._Discovery.html#authorization-server-metadata-endpoint) to obtain supported features and endpoints.
@@ -188,12 +188,12 @@ Content-Type: application/json
 }
 ```
 
-## Refreshing the Bearer Token
+## Refreshing Bearer Tokens
 The Bearer Token has a limited life specified in seconds by the value of the `expires_in` parameter. The Node should refresh the token before [it exceeds its half life](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.4._Behaviour_-_Access_Tokens.html#access-token-lifetime) (if the token lifetime is 30 seconds, then it should be refreshed at least 15 seconds before token expiry).
 
 Unlike the Authorization Code Flow, the Client Credential Flow does not issue a refresh token; 'refreshing' the token simply involves repeating the Client Credential Flow.
 
-## Fetch Authorization Server Public Keys
+## Fetching Authorization Server Public Keys
 As well as acquiring a token to allow this Node to register, the Node will also need the [Authorization Server's public keys](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.5._Behaviour_-_Resource_Servers.html#public-keys) so that it can authenticate calls on its own APIs. These keys should be fetched every hour to ensure the keys are always up to date.
 
 Example request to get server public keys:
