Whitespace, hyphens, standard -> specification, etc.

--- a/docs/2.0. Prerequisites.md
+++ b/docs/2.0. Prerequisites.md
@@ -5,7 +5,7 @@ Before using this guide, you should be familiar with the following specification
 
 ## NMOS Interface Specifications
 ### [IS-04 Discovery & Registration](https://specs.amwa.tv/is-04/) and [IS-05 Device Connection Management](https://specs.amwa.tv/is-05/)
-As well as a familiarity with the standards, it is also assumed that you already have a working implementation of IS-04 and IS-05 for your NMOS Node.
+As well as a familiarity with the specifications, it is also assumed that you already have a working implementation of IS-04 and IS-05 for your NMOS Node.
 ### [IS-07 Event & Tally](https://specs.amwa.tv/is-07/)
 If your NMOS Node implements the Events API then it is assumed that you are familiar with the specification and have a working implementation of IS-07 for your NMOS Node.
 ### [IS-08 Audio Channel Mapping](https://specs.amwa.tv/is-08/)
