--- a/docs/4.1. Node to Authorization Server Interactions.md
+++ b/docs/4.1. Node to Authorization Server Interactions.md
@@ -103,7 +103,7 @@ Content-Type: application/json
 ```
 
 ## Client Registration
-NMOS Nodes first need to register with the Authorization Server. This is usually a one time operation that a Node would typically perform when first activated on the network.
+NMOS Nodes first need to register with the Authorization Server. This is usually a one-time operation that a Node would typically perform when first activated on the network.
 
 The registration is done via a [dynamic client registration](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.2._Behaviour_-_Clients.html#client-registration) with the Authorization Server. The registration includes the expected grant type, which should be set to  [client credentials grant](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.2._Behaviour_-_Clients.html#client-credentials)
 
