--- a/docs/4.3. Controller to Authorization Server Interactions.md
+++ b/docs/4.3. Controller to Authorization Server Interactions.md
@@ -102,7 +102,7 @@ Content-Type: application/json
 ```
 
 ## Client Registration
-The NMOS Controller first needs to register with the Authorization Server. This is usually a one time operation that a Controller would typically perform when first activated on the network.
+The NMOS Controller first needs to register with the Authorization Server. This is usually a one-time operation that a Controller would typically perform when first activated on the network.
 
 The registration is done via a [dynamic client registration](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.2._Behaviour_-_Clients.html#client-registration) with the Authorization Server. The registration includes the expected grant type, which should be set to  [authorization code grant](https://tools.ietf.org/html/rfc6749#section-4.1).
 
