--- a/docs/3.1. Keycloak Setup.md
+++ b/docs/3.1. Keycloak Setup.md
@@ -34,10 +34,10 @@ You can get a latest version from the [Keycloak website](https://www.keycloak.or
 
 ## Enable TLS, Redirects and Discovery
 - In order to enable Keycloak for TLS (HTTPS) we would suggest using a Reverse Proxy such as the Apache web server.
-- As Keycloak is an OpenID Connect server, it places the OAuth Client Metadata at a different path to the OAuth2 standards. When using an Apache Reverse Proxy this can be overcome by adding an alias for this path.
+- As Keycloak is an OpenID Connect server, it places the Client Metadata at a different path to the OAuth 2.0 specification. When using an Apache Reverse Proxy this can be overcome by adding an alias for this path.
 - Finally, once Keycloak is set up, suitable DNS records will need to be added to your DNS server in order to enable NMOS discovery.
 
-An example Apache2 Reverse Proxy site configuration with a metadata alias is shown below. This makes Keycloak available on port 443, forwarding it from port 8082:
+An example Apache Reverse Proxy site configuration with a metadata alias is shown below. This makes Keycloak available on port 443, forwarding it from port 8082:
 
 ```
 <VirtualHost _default_:443>
