--- a/docs/4.2. Node to Registry Interactions (IS-04).md
+++ b/docs/4.2. Node to Registry Interactions (IS-04).md
@@ -2,7 +2,7 @@
 _(c) AMWA 2021, CC Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)_
 
 ## Registering with the NMOS Registry
-Once the Node has registered with the Authorization Server, and acquired a Bearer Token, the next step is for it to register with the NMOS Registry using the IS-04 API, by including the Bearer Token in the API call.
+Once the Node has registered with the Authorization Server, and acquired a Bearer Token, the next step is for it to register with the NMOS Registry using the [IS-04](https://specs.amwa.tv/is-04/releases/v1.3/docs/1.0._Overview.html) Registration API, by including the Bearer Token in the API call.
 
 ![Node to Registry Interaction](../docs/images/node_to_registry.png)
 
