--- a/docs/4.4. Controller to Node Interactions (IS-05, IS-08).md
+++ b/docs/4.4. Controller to Node Interactions (IS-05, IS-08).md
@@ -4,14 +4,14 @@ _(c) AMWA 2021, CC Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)_
 ## Creating an IS-05 Connection
 To create a connection between an NMOS Sender and Receiver the Controller must first query the NMOS Registry to obtain all registered NMOS Node resources.
 
-Then it can create a connection between Senders and Receivers using the [IS-05](https://specs.amwa.tv/is-05/releases/v1.1/docs/1.0._Overview.html) API.
+Then it can create a connection between Senders and Receivers using the [IS-05](https://specs.amwa.tv/is-05/releases/v1.1/docs/1.0._Overview.html) Connection API.
 
 ### Querying the NMOS Registry
 The Controller uses the [IS-04](https://specs.amwa.tv/is-04/releases/v1.3/docs/1.0._Overview.html) Query API to obtain a list of all registered NMOS Node resources from the NMOS Registry. This API call includes a valid Access Token in the HTTP header.
 
 ![Controller to Registry](../docs/images/controller_to_registry.png)
 
-Example query request including Access Token (`Authorization: Bearer`) in the HTTP header:
+Example query request including the Access Token (`Authorization: Bearer`) in the HTTP header:
 
 ```http
 GET /x-nmos/query/v1.3/nodes HTTP/1.1
@@ -72,7 +72,7 @@ Once the Controller has obtained the NMOS resource list, it can use the [IS-05](
 #### SDP Request
 ![Controller to Registry](../docs/images/controller_to_nodes.png)
 
-Example Sender SDP request including Access Token (`Authorization: Bearer`) in the HTTP header:
+Example Sender SDP request including the Access Token (`Authorization: Bearer`) in the HTTP header:
 
 ```http
 GET /x-nmos/connection/v1.1/single/senders/{senderId}/transportfile HTTP/1.1
@@ -111,7 +111,7 @@ a=mid:SECONDARY
 ```
 
 #### Connection Request
-Example connection request including Access Token (`Authorization: Bearer`) in the HTTP header:
+Example connection request including the Access Token (`Authorization: Bearer`) in the HTTP header:
 
 ```http
 PATCH /x-nmos/connection/v1.1/single/receivers/{receiverId}/staged HTTP/1.1
@@ -157,9 +157,9 @@ Content-Type: application/json
 ```
 
 ## Mapping Audio Channels (IS-08)
-The purpose of using [IS-08](https://specs.amwa.tv/is-08/releases/v1.0.1/docs/1.0._Overview.html) API is to allow mapping of one or more audio “Inputs” to one or more audio “Outputs”.
+The purpose of using the [IS-08](https://specs.amwa.tv/is-08/releases/v1.0.1/docs/1.0._Overview.html) Channel Mapping API is to allow mapping of one or more audio Inputs to one or more audio Outputs.
 
-Example mapping request including Access Token (`Authorization: Bearer`) in the HTTP header:
+Example mapping request including the Access Token (`Authorization: Bearer`) in the HTTP header:
 
 ```http
 POST /x-nmos/channelmapping/v1.0/map/activations HTTP/1.1
