Update 5.0. Development Resources.md

--- a/docs/5.0. Development Resources.md
+++ b/docs/5.0. Development Resources.md
@@ -8,4 +8,4 @@ The [NMOS testing tool](https://amwa-tv.github.io/nmos-testing/) creates a simpl
 This [online tool](https://jwt.io/#debugger-io) is a useful web app for experimenting with building and decoding JWTs.
 
 ## Keycloak Authentication Server
-You can get a latest version from the [Keycloak Website](https://www.keycloak.org/getting-started)
+You can get the latest version from the [Keycloak website](https://www.keycloak.org/getting-started).
