Update 4.6. Validating Access Tokens.md

--- a/docs/4.6. Validating Access Tokens.md
+++ b/docs/4.6. Validating Access Tokens.md
@@ -10,4 +10,4 @@ There are a number of steps that need to be considered while [validating the acc
 
 If any of these steps fail, then the associated request must be rejected.
 
-JWT.io has provided a number of third party libraries which support the JWT validation for most of the steps described above. However, even using these libraries, the extra step for private claims validation is still required for checking the NMOS private claims.
+[JWT.io](https://jwt.io/) has provided a number of third-party libraries which support the JWT validation for most of the steps described above. However, even using these libraries, the extra step for private claims validation is still required for checking the NMOS private claims.
