Tweaked section headings for readability

--- a/docs/4.3. Controller to Authorization Server Interactions.md
+++ b/docs/4.3. Controller to Authorization Server Interactions.md
@@ -3,16 +3,16 @@ _(c) AMWA 2021, CC Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)_
 ## Overview
 This section details the interactions between an NMOS Controller and the Authorization Server. These include:
 
-- **Discovery of the Authorization Server**
+- **Authorization Server Discovery**
 - **Client Registration**: Registration of the NMOS Controller with the Authorization Server.
 - **Authentication Code Flow**: Request of an Access Token from the Authorization Server.
-- **Refreshing the Bearer Token**: Ensuring the token is always valid.
+- **Refreshing Bearer Tokens**: Ensuring the token is always valid.
 
 ![Node to Authorization Interactions](../docs/images/authorization_flow.png)
 
 The sequence diagram above gives an overview of these interactions which are described in more detail below.
 
-## Discovery of the Authorization Server
+## Authorization Server Discovery
 In order to interact with the Authorization Server, you need to know where it is. IS-10 specifies that the [Authorization Server should use unicast DNS-SD](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/3.0._Discovery.html#dns-sd-advertisemen) to advertise itself to the  Controller.
 
 Once the Controller knows the whereabouts of the Authorization Server it can then fetch the [Authorization Server Metadata](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/3.0._Discovery.html#authorization-server-metadata-endpoint) to obtain supported features and endpoints.
@@ -241,7 +241,7 @@ Content-Type: application/json
 }
 ```
 
-## Refreshing the Bearer Token
+## Refreshing Bearer Tokens
 The Bearer Token has a limited life specified by the value of the `expires_in` parameter in seconds. The Node should refresh the token before [it exceeds its half life](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.4._Behaviour_-_Access_Tokens.html#access-token-lifetime) (for example if the token lifetime is 30 seconds, then it should be refreshed at least 15 seconds before token expiry).
 
 Because refresh tokens have the potential for a long lifetime, developers should ensure that strict storage requirements are in place to keep them from being leaked.
